pizza catching game

--- a/index.html
+++ b/index.html
@@ -14,21 +14,31 @@
             <div id="gameScreen">
                 <div class="screenPart" id="leftScreen">
                     <!-- <div class="fallingObject"></div> -->
-                    <div id="leftCharacter" class="character"></div>
+                    <div id="leftCharacter" class="character">
+                        <img src="./src/img/stickMan.svg" alt="" />
+                    </div>
                 </div>
 
                 <div class="screenPart" id="middleScreen">
-                    <div id="middleCharacter" class="character"></div>
+                    <div id="middleCharacter" class="character">
+                        <img src="./src/img/stickMan.svg" alt="" />
+                    </div>
                 </div>
 
                 <div class="screenPart" id="rightScreen">
-                    <div id="rightCharacter" class="character"></div>
+                    <div id="rightCharacter" class="character">
+                        <img src="./src/img/stickMan.svg" alt="" />
+                    </div>
                 </div>
             </div>
             <div id="gameButtons">
                 <button class="moveButton" id="leftButton">LEFT</button>
                 <button class="moveButton" id="rightButton">RIGHT</button>
             </div>
+        </div>
+        <div id="screenButContainer">
+            <button class="screenButton" id="leftScreenButton"></button>
+            <button class="screenButton" id="rightScreenButton"></button>
         </div>
     </body>
 </html>
