switched it alittle

--- a/index.html
+++ b/index.html
@@ -11,34 +11,89 @@
     <body>
         <h1 id="moveCount">0</h1>
         <div id="gameContainer">
-            <div id="gameScreen">
-                <div class="screenPart" id="leftScreen">
-                    <!-- <div class="fallingObject"></div> -->
-                    <div id="leftCharacter" class="character">
-                        <img src="./src/img/stickMan.svg" alt="" />
+            <div id="screenContainer">
+                <div id="screen1" class="screenFragment">
+                    <img
+                        src="/src/img/chef-03.svg"
+                        alt="chef"
+                        class="chef"
+                        id="chef1"
+                    />
+                    <!-- <div id="object1" class="fallingObject"></div> -->
+                    <div id="player1" class="player">
+                        <img src="/src/img/stickMan.svg" alt="stick" />
                     </div>
                 </div>
 
-                <div class="screenPart" id="middleScreen">
-                    <div id="middleCharacter" class="character">
-                        <img src="./src/img/stickMan.svg" alt="" />
+                <div id="screen2" class="screenFragment">
+                    <img
+                        src="/src/img/chef-03.svg"
+                        alt="chef"
+                        class="chef"
+                        id="chef2"
+                    />
+                    <!-- <div id="object2" class="fallingObject"></div> -->
+                    <div id="player2" class="player">
+                        <img src="/src/img/stickMan.svg" alt="" />
                     </div>
                 </div>
 
-                <div class="screenPart" id="rightScreen">
-                    <div id="rightCharacter" class="character">
-                        <img src="./src/img/stickMan.svg" alt="" />
+                <div id="screen3" class="screenFragment">
+                    <img
+                        src="/src/img/chef-03.svg"
+                        alt="chef"
+                        class="chef"
+                        id="chef3"
+                    />
+                    <!-- <div id="object3" class="fallingObject"></div> -->
+                    <div id="player3" class="player">
+                        <img src="/src/img/stickMan.svg" alt="" />
+                    </div>
+                </div>
+
+                <div id="screen4" class="screenFragment">
+                    <img
+                        src="/src/img/chef-03.svg"
+                        alt="chef"
+                        class="chef"
+                        id="chef4"
+                    />
+                    <!-- <div id="object4" class="fallingObject"></div> -->
+                    <div id="player4" class="player">
+                        <img src="/src/img/stickMan.svg" alt="" />
+                    </div>
+                </div>
+
+                <div id="screen5" class="screenFragment">
+                    <img
+                        src="/src/img/chef-03.svg"
+                        alt="chef"
+                        class="chef"
+                        id="chef5"
+                    />
+                    <!-- <div id="object5" class="fallingObject"></div> -->
+                    <div id="player5" class="player">
+                        <img src="/src/img/stickMan.svg" alt="" />
+                    </div>
+                </div>
+
+                <div id="screen6" class="screenFragment">
+                    <img
+                        src="/src/img/chef-03.svg"
+                        alt="chef"
+                        class="chef"
+                        id="chef6"
+                    />
+                    <!-- <div id="object6" class="fallingObject"></div> -->
+                    <div id="player6" class="player">
+                        <img src="/src/img/stickMan.svg" alt="" />
                     </div>
                 </div>
             </div>
-            <div id="gameButtons">
-                <button class="moveButton" id="leftButton">LEFT</button>
-                <button class="moveButton" id="rightButton">RIGHT</button>
+            <div id="buttonsContainer">
+                <button id="leftButton">LEFT</button>
+                <button id="rightButton">RIGHT</button>
             </div>
-        </div>
-        <div id="screenButContainer">
-            <button class="screenButton" id="leftScreenButton"></button>
-            <button class="screenButton" id="rightScreenButton"></button>
         </div>
     </body>
 </html>
