--- a/index.html
+++ b/index.html
@@ -9,9 +9,15 @@
         <link rel="stylesheet" href="./src/styles.css" />
     </head>
     <body>
-        <h1 id="moveCount">0</h1>
         <div id="gameContainer">
+            <h1 id="pizzaSign">PIZZA</h1>
+            <div id="roofContainer"></div>
             <div id="screenContainer">
+                <div id="screenBackground">
+                    <div id="door">
+                        <div id="doorKnob"></div>
+                    </div>
+                </div>
                 <div id="screen1" class="screenFragment">
                     <img
                         src="/src/img/chef-03.svg"
@@ -95,5 +101,6 @@
                 <button id="rightButton">RIGHT</button>
             </div>
         </div>
+        <h1 id="moveCount">0</h1>
     </body>
 </html>
