--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
             <div id="roofContainer"></div>
             <div id="screenContainer">
                 <div id="screenBackground">
+                    <img id="pizzaLogo" src="/src/img/pizza.svg" alt="" />
+                    <div id="window1" class="window"></div>
+                    <div id="window2" class="window"></div>
                     <div id="door">
                         <div id="doorKnob"></div>
                     </div>
